// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`07 O12 — return writes and the refund: the routes answer exactly as before the move > bulk approve, deny and receive 1`] = `
[
  {
    "body": {
      "failed": 2,
      "ok": 1,
      "results": [
        {
          "id": "<made>",
          "ok": true,
        },
        {
          "error": "Not in REQUESTED state",
          "id": "<made>",
          "ok": false,
        },
        {
          "error": "Not in REQUESTED state",
          "id": "<made>",
          "ok": false,
        },
      ],
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "failed": 1,
      "ok": 1,
      "results": [
        {
          "id": "<made>",
          "ok": true,
        },
        {
          "error": "Not in REQUESTED state",
          "id": "<made>",
          "ok": false,
        },
      ],
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "failed": 1,
      "ok": 1,
      "results": [
        {
          "id": "<made>",
          "ok": true,
        },
        {
          "error": "Already received or not authorized",
          "id": "<made>",
          "ok": false,
        },
      ],
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "failed": 0,
      "ok": 0,
      "results": [],
    },
    "replay": null,
    "status": 200,
  },
  {
    "channelRefundError": null,
    "channelRefundId": null,
    "manufacturerRef": null,
    "refundCents": null,
    "refundStatus": "PENDING",
    "status": "RECEIVED",
    "version": 3,
    "warrantyResolution": null,
    "warrantyStatus": null,
  },
  {
    "channelRefundError": null,
    "channelRefundId": null,
    "manufacturerRef": null,
    "refundCents": null,
    "refundStatus": "PENDING",
    "status": "REJECTED",
    "version": 2,
    "warrantyResolution": null,
    "warrantyStatus": null,
  },
]
`;

exports[`07 O12 — return writes and the refund: the routes answer exactly as before the move > create: a refusal, a create with its idempotency key, its replay, a warranty return 1`] = `
[
  {
    "body": {
      "error": "channel required",
    },
    "replay": null,
    "status": 400,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": "test-key-1",
      "inspectedAt": null,
      "isFbaReturn": false,
      "items": [
        {
          "conditionGrade": null,
          "disposition": null,
          "id": "<made>",
          "inspectionChecklist": null,
          "lotId": null,
          "notes": null,
          "orderItemId": "test-item-create",
          "photoUrls": [],
          "productId": "test-product-1",
          "quantity": 1,
          "returnId": "<made>",
          "scrapReason": null,
          "sku": "TEST-SKU-1",
          "workspaceId": "<made>",
        },
      ],
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-create",
      "reason": "Too small",
      "receivedAt": null,
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REQUESTED",
      "updatedAt": "<made>",
      "version": 1,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": "test-key-1",
      "inspectedAt": null,
      "isFbaReturn": false,
      "items": [
        {
          "conditionGrade": null,
          "disposition": null,
          "id": "<made>",
          "inspectionChecklist": null,
          "lotId": null,
          "notes": null,
          "orderItemId": "test-item-create",
          "photoUrls": [],
          "productId": "test-product-1",
          "quantity": 1,
          "returnId": "<made>",
          "scrapReason": null,
          "sku": "TEST-SKU-1",
          "workspaceId": "<made>",
        },
      ],
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-create",
      "reason": "Too small",
      "receivedAt": null,
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REQUESTED",
      "updatedAt": "<made>",
      "version": 1,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": "true",
    "status": 200,
  },
  {
    "body": {
      "channel": "SHOPIFY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": "<made>",
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "items": [],
      "manufacturerRef": null,
      "marketplace": null,
      "notes": null,
      "orderId": null,
      "reason": null,
      "receivedAt": null,
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "WARRANTY",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REQUESTED",
      "updatedAt": "<made>",
      "version": 1,
      "warrantyResolution": null,
      "warrantyStatus": "PENDING_DIAGNOSIS",
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
]
`;

exports[`07 O12 — return writes and the refund: the routes answer exactly as before the move > receive, inspect, restock, then scrap after the restock; scrap before any restock; their refusals 1`] = `
[
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-flow",
      "reason": null,
      "receivedAt": "<made>",
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "RECEIVED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
  ],
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": "GOOD",
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": "<made>",
      "isFbaReturn": false,
      "items": [
        {
          "conditionGrade": "GOOD",
          "disposition": "SELLABLE",
          "id": "<made>",
          "inspectionChecklist": null,
          "lotId": null,
          "notes": "Fine",
          "orderItemId": null,
          "photoUrls": [],
          "productId": "test-product-1",
          "quantity": 1,
          "returnId": "<made>",
          "scrapReason": null,
          "sku": "TEST-SKU-1",
          "workspaceId": "<made>",
        },
        {
          "conditionGrade": "DAMAGED",
          "disposition": "SCRAP",
          "id": "<made>",
          "inspectionChecklist": null,
          "lotId": null,
          "notes": null,
          "orderItemId": null,
          "photoUrls": [],
          "productId": "test-product-1",
          "quantity": 1,
          "returnId": "<made>",
          "scrapReason": "Torn",
          "sku": "TEST-SKU-1",
          "workspaceId": "<made>",
        },
        {
          "conditionGrade": "LIKE_NEW",
          "disposition": "SECOND_QUALITY",
          "id": "<made>",
          "inspectionChecklist": null,
          "lotId": null,
          "notes": null,
          "orderItemId": null,
          "photoUrls": [],
          "productId": null,
          "quantity": 1,
          "returnId": "<made>",
          "scrapReason": null,
          "sku": "TEST-SKU-LOOSE",
          "workspaceId": "<made>",
        },
      ],
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-flow",
      "reason": null,
      "receivedAt": "<made>",
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "INSPECTING",
      "updatedAt": "<made>",
      "version": 3,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": "GOOD",
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": "<made>",
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-flow",
      "reason": null,
      "receivedAt": "<made>",
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": "<made>",
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "RESTOCKED",
      "updatedAt": "<made>",
      "version": 4,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
    {
      "actor": "return-restock",
      "change": 1,
      "notes": null,
      "productId": "test-product-1",
      "reason": "RETURN_RESTOCKED",
      "referenceType": "Return",
    },
  ],
  [
    {
      "locationId": "test-loc",
      "quantity": 1,
    },
  ],
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": "GOOD",
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": "<made>",
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-flow",
      "reason": null,
      "receivedAt": "<made>",
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": "<made>",
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "SCRAPPED",
      "updatedAt": "<made>",
      "version": 5,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
    {
      "actor": "return-receive",
      "change": 0,
      "notes": "Return TEST-RMA-flow arrived at warehouse — awaiting inspection",
      "productId": "test-product-1",
      "reason": "RETURN_RECEIVED",
      "referenceType": "Return",
    },
    {
      "actor": "return-restock",
      "change": 1,
      "notes": null,
      "productId": "test-product-1",
      "reason": "RETURN_RESTOCKED",
      "referenceType": "Return",
    },
    {
      "actor": "return-scrap-after-restock",
      "change": -1,
      "notes": "Scrapped after prior restock — removing from stock",
      "productId": "test-product-1",
      "reason": "WRITE_OFF",
      "referenceType": "Return",
    },
  ],
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-scrap",
      "reason": null,
      "receivedAt": null,
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "SCRAPPED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [],
  {
    "body": {
      "error": "Return not found",
    },
    "replay": null,
    "status": 404,
  },
  {
    "body": {
      "error": "Return not found",
    },
    "replay": null,
    "status": 404,
  },
  500,
  500,
]
`;

exports[`07 O12 — return writes and the refund: the routes answer exactly as before the move > refund: refusals, skip-channel, a second one, channel OK with the fee note, Amazon manual, a channel failure, a staged amount 1`] = `
[
  {
    "body": {
      "error": "Return not found",
    },
    "replay": null,
    "status": 404,
  },
  {
    "body": {
      "error": "refundCents required (or stage on Return first)",
    },
    "replay": null,
    "status": 400,
  },
  {
    "body": {
      "error": "perLineAmounts references unknown return item test-ritem-other",
    },
    "replay": null,
    "status": 400,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelOutcome": "SKIPPED",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-refund1",
      "reason": null,
      "receivedAt": null,
      "refundCents": 1000,
      "refundId": "<made>",
      "refundStatus": "REFUNDED",
      "refundedAt": "<made>",
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REFUNDED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "error": "A refund is already in progress or completed for this return",
      "existingRefundId": "<made>",
      "existingRefundStatus": "POSTED",
    },
    "replay": null,
    "status": 409,
  },
  [
    {
      "actor": "test-user-1",
      "amountCents": 1000,
      "attempts": [
        {
          "channelRefundId": null,
          "errorMessage": null,
          "outcome": "SKIPPED",
        },
      ],
      "channel": "EBAY",
      "channelError": null,
      "channelRefundId": null,
      "channelStatus": "POSTED",
      "currencyCode": "EUR",
      "kind": "CASH",
      "notes": null,
      "perLineAmounts": null,
      "reason": "Refunded on eBay already",
    },
  ],
  {
    "channelRefundError": null,
    "channelRefundId": null,
    "manufacturerRef": null,
    "refundCents": 1000,
    "refundStatus": "REFUNDED",
    "status": "REFUNDED",
    "version": 2,
    "warrantyResolution": null,
    "warrantyStatus": null,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelMessage": "Test refund issued.",
      "channelOutcome": "OK",
      "channelRefundError": null,
      "channelRefundId": "TEST-CH-REFUND-1",
      "channelRefundedAt": "<made>",
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-refund2",
      "reason": null,
      "receivedAt": null,
      "refundCents": 8000,
      "refundId": "<made>",
      "refundStatus": "REFUNDED",
      "refundedAt": "<made>",
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REFUNDED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": null,
      "amountCents": 8000,
      "attempts": [
        {
          "channelRefundId": "TEST-CH-REFUND-1",
          "errorMessage": null,
          "outcome": "OK",
        },
      ],
      "channel": "EBAY",
      "channelError": null,
      "channelRefundId": "TEST-CH-REFUND-1",
      "channelStatus": "POSTED",
      "currencyCode": "EUR",
      "kind": "CASH",
      "notes": "Net €80.00 (gross €100.00, restocking −€15.00, return shipping −€5.00)",
      "perLineAmounts": {
        "test-ritem-refund-channel-a": 5000,
        "test-ritem-refund-channel-b": 3000,
      },
      "reason": "Item damaged",
    },
  ],
  {
    "channelRefundError": null,
    "channelRefundId": "TEST-CH-REFUND-1",
    "manufacturerRef": null,
    "refundCents": 8000,
    "refundStatus": "REFUNDED",
    "status": "REFUNDED",
    "version": 2,
    "warrantyResolution": null,
    "warrantyStatus": null,
  },
  {
    "body": {
      "channel": "AMAZON",
      "channelMessage": "Finish this refund in Seller Central.",
      "channelOutcome": "OK_MANUAL_REQUIRED",
      "channelRefundError": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-amazon",
      "reason": null,
      "receivedAt": null,
      "refundCents": 4000,
      "refundId": "<made>",
      "refundStatus": "REFUNDED",
      "refundedAt": "<made>",
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REFUNDED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": null,
      "amountCents": 4000,
      "attempts": [
        {
          "channelRefundId": null,
          "errorMessage": null,
          "outcome": "OK_MANUAL_REQUIRED",
        },
      ],
      "channel": "AMAZON",
      "channelError": null,
      "channelRefundId": null,
      "channelStatus": "MANUAL_REQUIRED",
      "currencyCode": "EUR",
      "kind": "CASH",
      "notes": null,
      "perLineAmounts": null,
      "reason": null,
    },
  ],
  {
    "body": {
      "channel": "EBAY",
      "channelError": "Test channel refused the refund",
      "channelOutcome": "FAILED",
      "channelRefundError": "Test channel refused the refund",
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-refund3",
      "reason": null,
      "receivedAt": null,
      "refundCents": 3000,
      "refundId": "<made>",
      "refundStatus": "CHANNEL_FAILED",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "RECEIVED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 502,
  },
  [
    {
      "actor": null,
      "amountCents": 3000,
      "attempts": [
        {
          "channelRefundId": null,
          "errorMessage": "Test channel refused the refund",
          "outcome": "FAILED",
        },
      ],
      "channel": "EBAY",
      "channelError": "Test channel refused the refund",
      "channelRefundId": null,
      "channelStatus": "FAILED",
      "currencyCode": "EUR",
      "kind": "CASH",
      "notes": null,
      "perLineAmounts": null,
      "reason": null,
    },
  ],
  {
    "channelRefundError": "Test channel refused the refund",
    "channelRefundId": null,
    "manufacturerRef": null,
    "refundCents": 3000,
    "refundStatus": "CHANNEL_FAILED",
    "status": "RECEIVED",
    "version": 2,
    "warrantyResolution": null,
    "warrantyStatus": null,
  },
  {
    "body": {
      "channel": "EBAY",
      "channelOutcome": "SKIPPED",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": null,
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": null,
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-refund4",
      "reason": null,
      "receivedAt": null,
      "refundCents": 2500,
      "refundId": "<made>",
      "refundStatus": "REFUNDED",
      "refundedAt": "<made>",
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "STANDARD",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "REFUNDED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": null,
      "warrantyStatus": null,
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  [
    {
      "actor": null,
      "amountCents": 2500,
      "attempts": [
        {
          "channelRefundId": null,
          "errorMessage": null,
          "outcome": "SKIPPED",
        },
      ],
      "channel": "EBAY",
      "channelError": null,
      "channelRefundId": null,
      "channelStatus": "POSTED",
      "currencyCode": "EUR",
      "kind": "CASH",
      "notes": null,
      "perLineAmounts": null,
      "reason": null,
    },
  ],
  [
    {
      "itemAmountsCents": {
        "test-ritem-refund-channel-a": 5000,
        "test-ritem-refund-channel-b": 3000,
      },
      "reasonText": "Item damaged",
      "returnId": "<made>",
    },
    {
      "returnId": "<made>",
    },
    {
      "returnId": "<made>",
    },
  ],
]
`;

exports[`07 O12 — return writes and the refund: the routes answer exactly as before the move > warranty: an update, nothing to update, unknown 1`] = `
[
  {
    "body": {
      "channel": "EBAY",
      "channelRefundError": null,
      "channelRefundId": null,
      "channelRefundedAt": null,
      "channelReturnId": null,
      "conditionGrade": null,
      "createdAt": "<made>",
      "currencyCode": "EUR",
      "defectReportedAt": "<made>",
      "id": "<made>",
      "idempotencyKey": null,
      "inspectedAt": null,
      "isFbaReturn": false,
      "manufacturerRef": "TEST-MREF-1",
      "marketplace": "IT",
      "notes": null,
      "orderId": "test-order-warranty",
      "reason": null,
      "receivedAt": null,
      "refundCents": null,
      "refundStatus": "PENDING",
      "refundedAt": null,
      "restockChannel": null,
      "restockWarehouseId": null,
      "restockedAt": null,
      "returnLabelCarrier": null,
      "returnLabelEmailedAt": null,
      "returnLabelGeneratedAt": null,
      "returnLabelUrl": null,
      "returnTrackingNumber": null,
      "returnType": "WARRANTY",
      "rmaNumber": "<made>",
      "sendcloudParcelId": null,
      "status": "RECEIVED",
      "updatedAt": "<made>",
      "version": 2,
      "warrantyResolution": "REPAIR",
      "warrantyStatus": "DIAGNOSED",
      "workspaceId": "<made>",
    },
    "replay": null,
    "status": 200,
  },
  {
    "body": {
      "error": "No warranty fields to update",
    },
    "replay": null,
    "status": 400,
  },
  {
    "body": {
      "error": "
Invalid \`prisma.return.update()\` invocation:


An operation failed because it depends on one or more records that were required but not found. No record was found for an update.",
    },
    "replay": null,
    "status": 500,
  },
  {
    "channelRefundError": null,
    "channelRefundId": null,
    "manufacturerRef": "TEST-MREF-1",
    "refundCents": null,
    "refundStatus": "PENDING",
    "status": "RECEIVED",
    "version": 2,
    "warrantyResolution": "REPAIR",
    "warrantyStatus": "DIAGNOSED",
  },
]
`;
